Most part of the JSdocs is completed. I will finish the rest of the comment until next commit. The docs are tested. I also did the OpenAPI documentation completely. Now the page with the documentaion is available.
